--- a/HTML･CSS課題.html
+++ b/HTML･CSS課題.html
@@ -2,13 +2,16 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-　　<title>9章演習</title>
-　　<link rel="stylesheet" href="HTML･CSS課題.css">
-  </head>
-  <body>
-    <header></header>
-  <main><div class="step-box">
-        <div class="step-img1"></div>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+<title>9章演習</title>
+<link rel="stylesheet" href="HTML･CSS課題.css">
+</head>
+<header></header> 
+ <body>
+    <main>
+     <div class="step-box">
+      <div class="step-img1"></div>
         <span class="step-num">step1</span>
         <h3 class="title">タイトルが入ります</h3>
         <p class="text">
@@ -16,7 +19,7 @@
           文章が入ります。文章が入ります。文章が入ります。
           文章が入ります。文章が入ります。文章が入ります。
         </p>
-      </div>
+     </div>
       <div class="step-box">
         <div class="step-img2"></div>
         <span class="step-num">step2</span>
@@ -33,8 +36,8 @@
           文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
         </p>
       </div>
-  </main>
-  <footer ></footer>
- </body>
+   </main>
+   <footer ></footer>
+  </body>
 </html>
 
